[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dgm"
version = "0.1.0"
description = "DGM course utilities and experiments"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm",
    "matplotlib",
    "ipython",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dgm"]
